--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^8.0.0
+  permission_handler: ^9.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
