--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^8.0.0
-  permission_handler: ^9.0.0
+  location: ^4.2.0
+  permission_handler: ^10.0.0
+  flutter_osm_plugin: ^0.42.0
 
 
   # The following adds the Cupertino Icons font to your application.
