--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   permission_handler: ^10.0.0
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  workmanager: ^0.5.0
+  awesome_notifications: ^0.7.0
+  shared_preferences: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
