--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   awesome_notifications: ^0.7.0
   shared_preferences: ^2.0.0
   path_provider: ^2.0.11
+  gpx: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
