--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   workmanager: ^0.5.0
   awesome_notifications: ^0.7.0
   shared_preferences: ^2.0.0
-  path_provider: ^2.0.11
+  external_path: ^1.0.3
   gpx: ^2.2.1
 
 
