--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.0
   external_path: ^1.0.3
   gpx: ^2.2.1
+  device_info_plus: ^8.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
