updating geolocator might have fixed foreground notification/ background location tracking

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geolocator: ^8.0.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
   location: ^4.2.0
   permission_handler: ^10.0.0
   flutter_map: ^3.1.0
@@ -49,9 +50,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dependency_overrides:
-  flutter_map:
-    git:
-      url: https://github.com/fleaflet/flutter_map.git
+#  flutter_map:
+#    git:
+#      url: https://github.com/fleaflet/flutter_map.git
 
 dev_dependencies:
   flutter_test:
