--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   external_path: ^1.0.3
   gpx: ^2.2.1
   device_info_plus: ^8.0.0
+  flutter_notification_listener: ^1.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
