--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,5 +56,7 @@
     <string>Older devices need location.</string>
     <key>NSLocationAlwaysUsageDescription</key>
     <string>Can I haz location always?</string>
+    <key>NSMotionUsageDescription</key>
+    <string>Detects human activity</string>
 </dict>
 </plist>
