--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   gpx: ^2.2.1
   device_info_plus: ^8.0.0
   flutter_notification_listener: ^1.3.2
+  flutter_activity_recognition: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
