--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_notification_listener: ^1.3.2
   flutter_activity_recognition: ^1.3.0
   pedometer: ^3.0.0
+  restart_app: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
