--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   permission_handler: ^10.0.0
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
-  workmanager: ^0.5.0
   awesome_notifications: ^0.7.0
   shared_preferences: ^2.0.0
   external_path: ^1.0.3
@@ -47,6 +46,7 @@ dependencies:
   flutter_activity_recognition: ^1.3.0
   pedometer: ^3.0.0
   restart_app: ^1.0.0
+  flutter_background_service: ^2.4.6
 
 
   # The following adds the Cupertino Icons font to your application.
