--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,6 @@ dependencies:
   flutter_notification_listener: ^1.3.2
   flutter_activity_recognition: ^1.3.0
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -67,6 +66,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.11.0
+  flutter_native_splash: any
 
 flutter_icons:
   android: true
@@ -74,6 +74,11 @@ flutter_icons:
   image_path: "assets/icon.png"
   min_sdk_android: 21
   # flutter pub run flutter_launcher_icons generates new icons
+
+flutter_native_splash:
+  image: assets/icon.png
+  color: "#ffffff"
+  # flutter pub run flutter_native_splash:create
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -89,6 +94,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/line_pattern.jpg
+     - assets/icon.png
+     - assets/loading.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
