today map looking mighty fine

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ flutter:
      - assets/line_pattern.jpg
      - assets/icon.png
      - assets/loading.gif
+     - assets/map_pin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
