--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.11.0
   flutter_native_splash: any
+  uuid: ^3.0.7
 
 flutter_icons:
   android: true
